Complete the first blog post on first steps
Add fun plotly plot to the end.
Spell and grammer checked with GPT-4.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,9 +19,11 @@ website:
 format:
   html:
     theme: 
-      light: default
+      light: default 
       dark: solar 
     css: styles.css
+mainfont: HackNerdFont
+monofont: HackNerdFontMono
 
 
 
