--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,16 @@ python = "^3.10"
 jupyterlab = "^3.6.3"
 jupyterlab-quarto = "^0.1.43"
 pillow = "^9.5.0"
+pythreejs = "^2.4.2"
+plotly = "^5.14.1"
+ipywidgets = "^8.0.6"
+jupyter-dash = "^0.4.2"
 
+
+[tool.poetry.group.dev.dependencies]
+jupyterlab-code-formatter = "^2.0.0"
+black = "^23.3.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
